--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
+body {
+  background-color: #d4ecfe;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.container {
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+
+  letter-spacing: 2px;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-family: 'Nunito', sans-serif;
+
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2 {
+
+  font-size: 22px;
+  letter-spacing: 2px;
+  color: #003b58;
+  font-family: 'Nunito', sans-serif;
+
+
+}
+
+.btn {
+
+  cursor: pointer;
+  border: 1px solid transparent;
+  letter-spacing: 2px;
+  font-weight: 700;
+  text-align: center;
+  color: #fff;
+  background-color: #0380d8;
+  align-self: center;
+  padding: 10px;
+  font-family: 'Nunito', sans-serif;
+
+
+}
+
+
+p {
+  font-family: 'Nunito', sans-serif;
+  font-size: 20px;
+
+}
+
+button {
+
+  background: white;
+  border: none;
+  font-size: 18px;
+  color: #0071c2;
+  font-family: 'Nunito', sans-serif;
+  margin-top: 20px;
+
+
+}
+
+button:hover {
+  background-color: #003b58;
+
 }
